--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Dancing UI</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello Andy!</h1>
-    <p>Your website is online soon 😎</p>
+    <p>You just added your FIRST animation. 🔥</p>
   </body>
 </html>
