--- a/index.html
+++ b/index.html
@@ -9,3 +9,78 @@
     <p>You just added your FIRST animation. 🔥</p>
   </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dancing UI</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(
+        -45deg,
+        #ff6a6a,
+        #ffd46a,
+        #6affc4
+      );
+      background-size: 400% 400%;
+      animation: gradientShift 12s ease infinite;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .container {
+      text-align: center;
+      color: white;
+      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      padding: 30px;
+    }
+
+    h1 {
+      font-size: 4rem;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      opacity: 0.9;
+      margin-bottom: 40px;
+    }
+
+    .press-key {
+      font-size: 1.1rem;
+      padding: 12px 26px;
+      background: rgba(0, 0, 0, 0.25);
+      border-radius: 12px;
+      display: inline-block;
+      backdrop-filter: blur(4px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Dancing UI</h1>
+    <p>A minimal playground for animated UI components.</p>
+    <div class="press-key">Press <strong>G</strong> to open the menu</div>
+  </div>
+</body>
+</html>
