--- a/index.html
+++ b/index.html
@@ -71,5 +71,16 @@
     <p>A minimal playground for animated UI components.</p>
     <div class="press-key">Press <strong>G</strong> to open the menu</div>
   </div>
+  <!-- MENU -->
+<div id="sideMenu">
+  <h2>UI Playground</h2>
+  <ul>
+    <li>Buttons</li>
+    <li>Sliders</li>
+    <li>Scroll Effects</li>
+    <li>Animations</li>
+  </ul>
+</div>
+
 </body>
 </html>
