--- a/index.html
+++ b/index.html
@@ -85,3 +85,83 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neutral Gradient Homepage</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(120deg, red, yellow, green, cyan, blue, purple);
+      background-size: 600% 600%;
+      animation: gradientShift 20s ease infinite;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Side Panel */
+    #sidePanel {
+      position: fixed;
+      top: 0;
+      left: -250px; /* hidden */
+      width: 250px;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      padding: 20px;
+      transition: left 0.3s ease;
+    }
+
+    #sidePanel.active {
+      left: 0;
+    }
+
+    #sidePanel h2 {
+      margin-top: 0;
+    }
+
+    #content {
+      padding: 40px;
+      color: white;
+      text-shadow: 0 0 5px black;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Side Menu -->
+  <div id="sidePanel">
+    <h2>Menu</h2>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Projects</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+
+  <!-- Main Content -->
+  <div id="content">
+    <h1>Welcome to the Homepage</h1>
+    <p>Press the <strong>G</strong> key to toggle the side menu.</p>
+  </div>
+
+  <script>
+    const panel = document.getElementById("sidePanel");
+
+    document.addEventListener("keydown", (event) => {
+      if (event.key.toLowerCase() === "g") {
+        panel.classList.toggle("active");
+      }
+    });
+  </script>
+
+</body>
+</html>
