--- a/index.html
+++ b/index.html
@@ -12,119 +12,71 @@
       font-family: Arial, sans-serif;
     }
 
-    body {
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden;
-      background: linear-gradient(-45deg, #ff6a6a, #ffd46a, #6affc4);
-      background-size: 400% 400%;
-      animation: gradientShift 12s ease infinite;
-    }
+    <body>
 
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+    <!-- BACKGROUND -->
+    <div class="background-gradient"></div>
 
-    /* SIDE PANEL */
-    #sidePanel {
-      position: fixed;
-      left: -260px;
-      top: 0;
-      width: 260px;
-      height: 100%;
-      background: rgba(0,0,0,0.85);
-      color: white;
-      padding: 20px;
-      transition: left 0.3s ease;
-    }
-    #sidePanel.active { left: 0; }
+    <!-- SCREEN 1 — TITLE SCREEN -->
+    <div id="screen-title" class="screen visible">
+        <div class="container">
+            <h1 class="title">My Cool Game</h1>
+            <p class="subtitle">A journey begins...</p>
+            <p class="press-g">Press G to Continue</p>
+        </div>
+    </div>
 
-    #sidePanel ul { list-style: none; }
-    #sidePanel li {
-      margin: 12px 0;
-      cursor: pointer;
-      opacity: 0.85;
-      transition: opacity 0.2s;
-    }
-    #sidePanel li:hover { opacity: 1; }
+    <!-- SCREEN 2 — MENU -->
+    <div id="screen-menu" class="screen hidden">
+        <div class="container">
+            <h1 class="title">Main Menu</h1>
+            <p class="subtitle">Choose an option:</p>
+            <ul>
+                <li id="playGame">Play</li>
+                <li id="settingsBtn">Settings</li>
+                <li id="exitBtn">Exit</li>
+            </ul>
+        </div>
+    </div>
 
-    /* CONTENT */
-    #content {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
-      opacity: 1;
-      transition: opacity 0.4s ease;
-      width: 80%;
-      max-width: 700px;
-    }
+    <!-- SCREEN 3 — SETTINGS -->
+    <div id="screen-settings" class="screen hidden">
+        <div class="container">
+            <h1 class="title">Settings</h1>
+            <p class="subtitle">Audio, brightness, gameplay...</p>
+            <p class="press-g" id="backToMenu">← Back to Menu</p>
+        </div>
+    </div>
 
-    .hidden { opacity: 0; }
+    <!-- JS -->
+    <script>
+        const screens = {
+            title: document.getElementById("screen-title"),
+            menu: document.getElementById("screen-menu"),
+            settings: document.getElementById("screen-settings")
+        };
 
-    h1 { font-size: 3.5rem; margin-bottom: 20px; }
-    p { font-size: 1.2rem; opacity: 0.9; margin-bottom: 20px; }
+        function showScreen(name) {
+            for (let key in screens) {
+                screens[key].classList.add("hidden");
+                screens[key].classList.remove("visible");
+            }
+            screens[name].classList.remove("hidden");
+            screens[name].classList.add("visible");
+        }
 
-    /* BUTTON DEMO */
-    .button-demo {
-      margin-top: 25px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-    }
+        // Click / keybind controls
+        document.addEventListener("keydown", (e) => {
+            if (e.key === "g" || e.key === "G") {
+                showScreen("menu");
+            }
+        });
 
-    .btn {
-      padding: 12px 26px;
-      border-radius: 10px;
-      border: none;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: 0.25s ease;
-    }
+        document.getElementById("settingsBtn").onclick = () => showScreen("settings");
+        document.getElementById("backToMenu").onclick = () => showScreen("menu");
+    </script>
 
-    .glow {
-      background: #ffffff22;
-      color: white;
-      border: 1px solid #ffffff55;
-      box-shadow: 0 0 10px #ffffff55;
-    }
-    .glow:hover {
-      box-shadow: 0 0 20px #ffffffaa;
-    }
-
-    .bounce {
-      background: #222;
-      color: white;
-    }
-    .bounce:hover {
-      transform: translateY(-5px);
-    }
-
-    .outline {
-      background: transparent;
-      border: 2px solid white;
-      color: white;
-    }
-    .outline:hover {
-      background: white;
-      color: black;
-    }
-
-    .glass {
-      background: rgba(255,255,255,0.2);
-      border: 1px solid rgba(255,255,255,0.4);
-      backdrop-filter: blur(8px);
-      color: white;
-    }
-    .glass:hover {
-      background: rgba(255,255,255,0.35);
-    }
-  </style>
-</head>
+</body>
 
 <body>
 
