--- a/index.html
+++ b/index.html
@@ -6,152 +6,127 @@
   <title>Dancing UI</title>
 
   <style>
+    /* RESET */
     * {
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       box-sizing: border-box;
       font-family: Arial, sans-serif;
     }
 
-    <body>
+    /* BACKGROUND */
+    .background-gradient {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: linear-gradient(120deg, #ff003c, #ffea00, #00eaff, #7b00ff);
+      background-size: 400% 400%;
+      animation: colorShift 15s ease infinite;
+      z-index: -1;
+    }
 
-    <!-- BACKGROUND -->
-    <div class="background-gradient"></div>
+    @keyframes colorShift {
+      0% { background-position: 0% 50%; }
+      25% { background-position: 50% 50%; }
+      50% { background-position: 100% 50%; }
+      75% { background-position: 50% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-    <!-- SCREEN 1 — TITLE SCREEN -->
-    <div id="screen-title" class="screen visible">
-        <div class="container">
-            <h1 class="title">My Cool Game</h1>
-            <p class="subtitle">A journey begins...</p>
-            <p class="press-g">Press G to Continue</p>
-        </div>
-    </div>
+    /* CENTER CONTAINER */
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      color: white;
+      backdrop-filter: blur(3px) brightness(1.1);
+    }
 
-    <!-- SCREEN 2 — MENU -->
-    <div id="screen-menu" class="screen hidden">
-        <div class="container">
-            <h1 class="title">Main Menu</h1>
-            <p class="subtitle">Choose an option:</p>
-            <ul>
-                <li id="playGame">Play</li>
-                <li id="settingsBtn">Settings</li>
-                <li id="exitBtn">Exit</li>
-            </ul>
-        </div>
-    </div>
+    .title { font-size: 3.5rem; font-weight: 700; }
+    .subtitle { margin-top: 10px; opacity: 0.85; }
+    .press-g { margin-top: 20px; opacity: 0.9; }
 
-    <!-- SCREEN 3 — SETTINGS -->
-    <div id="screen-settings" class="screen hidden">
-        <div class="container">
-            <h1 class="title">Settings</h1>
-            <p class="subtitle">Audio, brightness, gameplay...</p>
-            <p class="press-g" id="backToMenu">← Back to Menu</p>
-        </div>
-    </div>
+    /* SCREEN SYSTEM */
+    .screen {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 0.6s ease;
+      pointer-events: none;
+    }
 
-    <!-- JS -->
-    <script>
-        const screens = {
-            title: document.getElementById("screen-title"),
-            menu: document.getElementById("screen-menu"),
-            settings: document.getElementById("screen-settings")
-        };
+    .visible {
+      opacity: 1;
+      pointer-events: auto;
+    }
 
-        function showScreen(name) {
-            for (let key in screens) {
-                screens[key].classList.add("hidden");
-                screens[key].classList.remove("visible");
-            }
-            screens[name].classList.remove("hidden");
-            screens[name].classList.add("visible");
-        }
-
-        // Click / keybind controls
-        document.addEventListener("keydown", (e) => {
-            if (e.key === "g" || e.key === "G") {
-                showScreen("menu");
-            }
-        });
-
-        document.getElementById("settingsBtn").onclick = () => showScreen("settings");
-        document.getElementById("backToMenu").onclick = () => showScreen("menu");
-    </script>
-
-</body>
+    .hidden { opacity: 0; pointer-events: none; }
+  </style>
+</head>
 
 <body>
 
-  <!-- MENU -->
-  <div id="sidePanel">
-    <h2>UI Playground</h2>
-    <ul>
-      <li onclick="loadPage('home')">Home</li>
-      <li onclick="loadPage('buttons')">Buttons</li>
-      <li onclick="loadPage('sliders')">Sliders</li>
-      <li onclick="loadPage('animations')">Animations</li>
-    </ul>
+  <!-- BACKGROUND -->
+  <div class="background-gradient"></div>
+
+  <!-- SCREEN 1 — TITLE -->
+  <div id="screen-title" class="screen visible">
+    <div class="container">
+      <h1 class="title">My Cool Game</h1>
+      <p class="subtitle">A journey begins...</p>
+      <p class="press-g">Press G to Continue</p>
+    </div>
   </div>
 
-  <!-- CONTENT -->
-  <div id="content">
-    <h1>Dancing UI</h1>
-    <p>A minimal playground for animated UI components.</p>
-    <p>Press <strong>G</strong> to open the menu.</p>
+  <!-- SCREEN 2 — MENU -->
+  <div id="screen-menu" class="screen hidden">
+    <div class="container">
+      <h1 class="title">Main Menu</h1>
+      <p class="subtitle">Choose an option:</p>
+      <ul>
+        <li id="playGame">Play</li>
+        <li id="settingsBtn">Settings</li>
+        <li id="exitBtn">Exit</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- SCREEN 3 — SETTINGS -->
+  <div id="screen-settings" class="screen hidden">
+    <div class="container">
+      <h1 class="title">Settings</h1>
+      <p class="subtitle">Audio, brightness, gameplay...</p>
+      <p class="press-g" id="backToMenu">← Back to Menu</p>
+    </div>
   </div>
 
   <script>
-    const panel = document.getElementById("sidePanel");
-    const content = document.getElementById("content");
+    const screens = {
+      title: document.getElementById("screen-title"),
+      menu: document.getElementById("screen-menu"),
+      settings: document.getElementById("screen-settings")
+    };
 
-    document.addEventListener("keydown", (event) => {
-      if (event.key.toLowerCase() === "g") {
-        panel.classList.toggle("active");
+    function showScreen(name) {
+      for (let key in screens) {
+        screens[key].classList.remove("visible");
+        screens[key].classList.add("hidden");
       }
+      screens[name].classList.remove("hidden");
+      screens[name].classList.add("visible");
+    }
+
+    document.addEventListener("keydown", (e) => {
+      if (e.key.toLowerCase() === "g") showScreen("menu");
     });
 
-    function loadPage(page) {
-      content.classList.add("hidden");
-
-      setTimeout(() => {
-
-        if (page === "home") {
-          content.innerHTML = `
-            <h1>Dancing UI</h1>
-            <p>A minimal playground for animated UI components.</p>
-            <p>Press <strong>G</strong> to open the menu.</p>
-          `;
-        }
-
-        if (page === "buttons") {
-          content.innerHTML = `
-            <h1>Buttons</h1>
-            <p>Try out different button styles.</p>
-
-            <div class="button-demo">
-              <button class="btn glow">Glow Button</button>
-              <button class="btn bounce">Bounce Button</button>
-              <button class="btn outline">Outline Button</button>
-              <button class="btn glass">Glass Button</button>
-            </div>
-          `;
-        }
-
-        if (page === "sliders") {
-          content.innerHTML = `
-            <h1>Sliders</h1>
-            <p>UI sliders will appear here.</p>
-          `;
-        }
-
-        if (page === "animations") {
-          content.innerHTML = `
-            <h1>Animations</h1>
-            <p>Cool animations will be shown here.</p>
-          `;
-        }
-
-        content.classList.remove("hidden");
-      }, 400);
-    }
+    document.getElementById("settingsBtn").onclick = () => showScreen("settings");
+    document.getElementById("backToMenu").onclick = () => showScreen("menu");
   </script>
 
 </body>
