--- a/index.html
+++ b/index.html
@@ -6,127 +6,200 @@
   <title>Dancing UI</title>
 
   <style>
-    /* RESET */
     * {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       box-sizing: border-box;
       font-family: Arial, sans-serif;
     }
 
-    /* BACKGROUND */
-    .background-gradient {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: linear-gradient(120deg, #ff003c, #ffea00, #00eaff, #7b00ff);
+    body {
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+      background: linear-gradient(-45deg, #ff6a6a, #ffd46a, #6affc4);
       background-size: 400% 400%;
-      animation: colorShift 15s ease infinite;
-      z-index: -1;
+      animation: gradientShift 12s ease infinite;
     }
 
-    @keyframes colorShift {
+    @keyframes gradientShift {
       0% { background-position: 0% 50%; }
-      25% { background-position: 50% 50%; }
       50% { background-position: 100% 50%; }
-      75% { background-position: 50% 50%; }
       100% { background-position: 0% 50%; }
     }
 
-    /* CENTER CONTAINER */
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-      color: white;
-      backdrop-filter: blur(3px) brightness(1.1);
-    }
-
-    .title { font-size: 3.5rem; font-weight: 700; }
-    .subtitle { margin-top: 10px; opacity: 0.85; }
-    .press-g { margin-top: 20px; opacity: 0.9; }
-
-    /* SCREEN SYSTEM */
-    .screen {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
+    /* SIDE PANEL */
+    #sidePanel {
+      position: fixed;
+      left: -260px;
+      top: 0;
+      width: 260px;
       height: 100%;
-      opacity: 0;
-      transition: opacity 0.6s ease;
-      pointer-events: none;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      padding: 20px;
+      transition: left 0.3s ease;
     }
+    #sidePanel.active { left: 0; }
 
-    .visible {
+    #sidePanel ul { list-style: none; }
+    #sidePanel li {
+      margin: 12px 0;
+      cursor: pointer;
+      opacity: 0.85;
+      transition: opacity 0.2s;
+    }
+    #sidePanel li:hover { opacity: 1; }
+
+    /* CONTENT */
+    #content {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      text-align: center;
       opacity: 1;
-      pointer-events: auto;
+      transition: opacity 0.4s ease;
+      width: 80%;
+      max-width: 700px;
     }
 
-    .hidden { opacity: 0; pointer-events: none; }
+    .hidden { opacity: 0; }
+
+    h1 { font-size: 3.5rem; margin-bottom: 20px; }
+    p { font-size: 1.2rem; opacity: 0.9; margin-bottom: 20px; }
+
+    /* BUTTON DEMO */
+    .button-demo {
+      margin-top: 25px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+    }
+
+    .btn {
+      padding: 12px 26px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: 0.25s ease;
+    }
+
+    .glow {
+      background: #ffffff22;
+      color: white;
+      border: 1px solid #ffffff55;
+      box-shadow: 0 0 10px #ffffff55;
+    }
+    .glow:hover {
+      box-shadow: 0 0 20px #ffffffaa;
+    }
+
+    .bounce {
+      background: #222;
+      color: white;
+    }
+    .bounce:hover {
+      transform: translateY(-5px);
+    }
+
+    .outline {
+      background: transparent;
+      border: 2px solid white;
+      color: white;
+    }
+    .outline:hover {
+      background: white;
+      color: black;
+    }
+
+    .glass {
+      background: rgba(255,255,255,0.2);
+      border: 1px solid rgba(255,255,255,0.4);
+      backdrop-filter: blur(8px);
+      color: white;
+    }
+    .glass:hover {
+      background: rgba(255,255,255,0.35);
+    }
   </style>
 </head>
 
 <body>
 
-  <!-- BACKGROUND -->
-  <div class="background-gradient"></div>
-
-  <!-- SCREEN 1 — TITLE -->
-  <div id="screen-title" class="screen visible">
-    <div class="container">
-      <h1 class="title">My Cool Game</h1>
-      <p class="subtitle">A journey begins...</p>
-      <p class="press-g">Press G to Continue</p>
-    </div>
+  <!-- MENU -->
+  <div id="sidePanel">
+    <h2>UI Playground</h2>
+    <ul>
+      <li onclick="loadPage('home')">Home</li>
+      <li onclick="loadPage('buttons')">Buttons</li>
+      <li onclick="loadPage('sliders')">Sliders</li>
+      <li onclick="loadPage('animations')">Animations</li>
+    </ul>
   </div>
 
-  <!-- SCREEN 2 — MENU -->
-  <div id="screen-menu" class="screen hidden">
-    <div class="container">
-      <h1 class="title">Main Menu</h1>
-      <p class="subtitle">Choose an option:</p>
-      <ul>
-        <li id="playGame">Play</li>
-        <li id="settingsBtn">Settings</li>
-        <li id="exitBtn">Exit</li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- SCREEN 3 — SETTINGS -->
-  <div id="screen-settings" class="screen hidden">
-    <div class="container">
-      <h1 class="title">Settings</h1>
-      <p class="subtitle">Audio, brightness, gameplay...</p>
-      <p class="press-g" id="backToMenu">← Back to Menu</p>
-    </div>
+  <!-- CONTENT -->
+  <div id="content">
+    <h1>Dancing UI</h1>
+    <p>A minimal playground for animated UI components.</p>
+    <p>Press <strong>G</strong> to open the menu.</p>
   </div>
 
   <script>
-    const screens = {
-      title: document.getElementById("screen-title"),
-      menu: document.getElementById("screen-menu"),
-      settings: document.getElementById("screen-settings")
-    };
+    const panel = document.getElementById("sidePanel");
+    const content = document.getElementById("content");
 
-    function showScreen(name) {
-      for (let key in screens) {
-        screens[key].classList.remove("visible");
-        screens[key].classList.add("hidden");
+    document.addEventListener("keydown", (event) => {
+      if (event.key.toLowerCase() === "g") {
+        panel.classList.toggle("active");
       }
-      screens[name].classList.remove("hidden");
-      screens[name].classList.add("visible");
-    }
-
-    document.addEventListener("keydown", (e) => {
-      if (e.key.toLowerCase() === "g") showScreen("menu");
     });
 
-    document.getElementById("settingsBtn").onclick = () => showScreen("settings");
-    document.getElementById("backToMenu").onclick = () => showScreen("menu");
+    function loadPage(page) {
+      content.classList.add("hidden");
+
+      setTimeout(() => {
+
+        if (page === "home") {
+          content.innerHTML = `
+            <h1>Dancing UI</h1>
+            <p>A minimal playground for animated UI components.</p>
+            <p>Press <strong>G</strong> to open the menu.</p>
+          `;
+        }
+
+        if (page === "buttons") {
+          content.innerHTML = `
+            <h1>Buttons</h1>
+            <p>Try out different button styles.</p>
+
+            <div class="button-demo">
+              <button class="btn glow">Glow Button</button>
+              <button class="btn bounce">Bounce Button</button>
+              <button class="btn outline">Outline Button</button>
+              <button class="btn glass">Glass Button</button>
+            </div>
+          `;
+        }
+
+        if (page === "sliders") {
+          content.innerHTML = `
+            <h1>Sliders</h1>
+            <p>UI sliders will appear here.</p>
+          `;
+        }
+
+        if (page === "animations") {
+          content.innerHTML = `
+            <h1>Animations</h1>
+            <p>Cool animations will be shown here.</p>
+          `;
+        }
+
+        content.classList.remove("hidden");
+      }, 400);
+    }
   </script>
 
 </body>
