--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dancing UI</title>
-
   <style>
-    * {
-      margin: 0; padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+    /* RESET */
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
 
+    /* BACKGROUND */
     body {
       height: 100vh;
       width: 100vw;
@@ -19,8 +16,8 @@
       background: linear-gradient(-45deg, #ff6a6a, #ffd46a, #6affc4);
       background-size: 400% 400%;
       animation: gradientShift 12s ease infinite;
+      color: white;
     }
-
     @keyframes gradientShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -37,169 +34,202 @@
       background: rgba(0,0,0,0.85);
       color: white;
       padding: 20px;
-      transition: left 0.3s ease;
+      transition: left 0.32s cubic-bezier(.2,.9,.2,1);
+      z-index: 60;
     }
     #sidePanel.active { left: 0; }
-
-    #sidePanel ul { list-style: none; }
+    #sidePanel h2 { margin-bottom: 14px; font-size: 1.1rem; }
+    #sidePanel ul { list-style: none; padding: 0; }
     #sidePanel li {
-      margin: 12px 0;
+      padding: 10px 6px;
+      border-radius: 6px;
       cursor: pointer;
-      opacity: 0.85;
-      transition: opacity 0.2s;
+      opacity: 0.9;
+      transition: background 0.18s, transform 0.18s;
+      user-select: none;
     }
-    #sidePanel li:hover { opacity: 1; }
+    #sidePanel li:hover { background: rgba(255,255,255,0.06); transform: translateX(6px); }
 
-    /* CONTENT */
-    #content {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
-      opacity: 1;
-      transition: opacity 0.4s ease;
-      width: 80%;
-      max-width: 700px;
-    }
-
-    .hidden { opacity: 0; }
-
-    h1 { font-size: 3.5rem; margin-bottom: 20px; }
-    p { font-size: 1.2rem; opacity: 0.9; margin-bottom: 20px; }
-
-    /* BUTTON DEMO */
-    .button-demo {
-      margin-top: 25px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 12px 26px;
+    /* top-right small help */
+    #hint {
+      position: fixed;
+      right: 18px;
+      top: 18px;
+      background: rgba(0,0,0,0.25);
+      padding: 8px 12px;
       border-radius: 10px;
-      border: none;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: 0.25s ease;
+      backdrop-filter: blur(4px);
+      font-size: 0.95rem;
+      z-index: 70;
     }
 
-    .glow {
-      background: #ffffff22;
-      color: white;
-      border: 1px solid #ffffff55;
-      box-shadow: 0 0 10px #ffffff55;
+    /* SCREEN system - screens stack full page, fade between them */
+    .screen {
+      position: absolute;
+      inset: 0; /* top:0; left:0; right:0; bottom:0 */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 40px;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.48s ease;
+      z-index: 10;
     }
-    .glow:hover {
-      box-shadow: 0 0 20px #ffffffaa;
-    }
+    .screen.visible { opacity: 1; pointer-events: auto; }
+    .screen h1 { font-size: 3.2rem; margin-bottom: 12px; letter-spacing: 1px; }
+    .screen p { font-size: 1.05rem; opacity: 0.95; margin-bottom: 18px; }
 
-    .bounce {
-      background: #222;
-      color: white;
-    }
-    .bounce:hover {
-      transform: translateY(-5px);
-    }
+    /* content width */
+    .panel-inner { width: 90%; max-width: 900px; margin: 0 auto; color: white; }
 
-    .outline {
-      background: transparent;
-      border: 2px solid white;
-      color: white;
+    /* BUTTON DEMO styles */
+    .button-demo { margin-top: 18px; display:flex; gap:12px; flex-wrap:wrap; justify-content:center; }
+    .btn {
+      padding: 12px 22px; border-radius: 10px; border: none; cursor:pointer; font-size: 1rem;
+      transition: transform .18s ease, box-shadow .18s ease, background .18s ease, color .18s ease;
     }
-    .outline:hover {
-      background: white;
-      color: black;
+    .btn.glow {
+      background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.18);
+      color: white; box-shadow: 0 6px 18px rgba(0,0,0,0.25);
     }
+    .btn.glow:hover { box-shadow: 0 12px 28px rgba(255,255,255,0.06); transform: translateY(-4px); }
 
-    .glass {
-      background: rgba(255,255,255,0.2);
-      border: 1px solid rgba(255,255,255,0.4);
-      backdrop-filter: blur(8px);
-      color: white;
+    .btn.bounce {
+      background: #111; color: #fff; box-shadow: 0 6px 14px rgba(0,0,0,0.5);
     }
-    .glass:hover {
-      background: rgba(255,255,255,0.35);
+    .btn.bounce:hover { transform: translateY(-6px); }
+
+    .btn.outline { background: transparent; color: white; border: 2px solid rgba(255,255,255,0.9); }
+    .btn.outline:hover { background: white; color: #000; transform: translateY(-4px); }
+
+    .btn.glass {
+      background: rgba(255,255,255,0.12); border: 1px solid rgba(255,255,255,0.2); backdrop-filter: blur(6px);
+    }
+    .btn.glass:hover { background: rgba(255,255,255,0.22); transform: translateY(-3px); }
+
+    /* small responsive tweak */
+    @media (max-width:520px) {
+      .screen h1 { font-size: 2rem; }
+      #sidePanel { width: 220px; left: -220px; }
+      #sidePanel.active { left: 0; }
     }
   </style>
 </head>
-
 <body>
 
-  <!-- MENU -->
-  <div id="sidePanel">
+  <!-- side menu -->
+  <nav id="sidePanel" aria-hidden="true">
     <h2>UI Playground</h2>
     <ul>
-      <li onclick="loadPage('home')">Home</li>
-      <li onclick="loadPage('buttons')">Buttons</li>
-      <li onclick="loadPage('sliders')">Sliders</li>
-      <li onclick="loadPage('animations')">Animations</li>
+      <li data-page="home">Home</li>
+      <li data-page="buttons">Buttons</li>
+      <li data-page="sliders">Sliders</li>
+      <li data-page="animations">Animations</li>
     </ul>
-  </div>
+  </nav>
 
-  <!-- CONTENT -->
-  <div id="content">
-    <h1>Dancing UI</h1>
-    <p>A minimal playground for animated UI components.</p>
-    <p>Press <strong>G</strong> to open the menu.</p>
-  </div>
+  <!-- tiny hint -->
+  <div id="hint">Press <strong>G</strong> • Toggle Menu</div>
+
+  <!-- SCREENS -->
+  <section id="home" class="screen visible">
+    <div class="panel-inner">
+      <h1>Dancing UI</h1>
+      <p>A minimal playground for animated UI components — press G to open the menu and pick a demo.</p>
+    </div>
+  </section>
+
+  <section id="buttons" class="screen">
+    <div class="panel-inner">
+      <h1>Buttons</h1>
+      <p>Try different button styles — hover and click them.</p>
+
+      <div class="button-demo">
+        <button class="btn glow">Glow Button</button>
+        <button class="btn bounce">Bounce Button</button>
+        <button class="btn outline">Outline Button</button>
+        <button class="btn glass">Glass Button</button>
+      </div>
+    </div>
+  </section>
+
+  <section id="sliders" class="screen">
+    <div class="panel-inner">
+      <h1>Sliders</h1>
+      <p>Sliders and range controls will go here (coming soon).</p>
+    </div>
+  </section>
+
+  <section id="animations" class="screen">
+    <div class="panel-inner">
+      <h1>Animations</h1>
+      <p>Small animation experiments and effects live here.</p>
+    </div>
+  </section>
 
   <script>
-    const panel = document.getElementById("sidePanel");
-    const content = document.getElementById("content");
+    // ---------- elements ----------
+    const side = document.getElementById('sidePanel');
+    const hint = document.getElementById('hint');
+    const menuItems = Array.from(side.querySelectorAll('li[data-page]'));
+    const screens = {
+      home: document.getElementById('home'),
+      buttons: document.getElementById('buttons'),
+      sliders: document.getElementById('sliders'),
+      animations: document.getElementById('animations')
+    };
 
-    document.addEventListener("keydown", (event) => {
-      if (event.key.toLowerCase() === "g") {
-        panel.classList.toggle("active");
+    // Toggle side menu with G key
+    document.addEventListener('keydown', (e) => {
+      if (e.key.toLowerCase() === 'g') {
+        side.classList.toggle('active');
+        // update aria (optional)
+        side.setAttribute('aria-hidden', side.classList.contains('active') ? 'false' : 'true');
       }
     });
 
-    function loadPage(page) {
-      content.classList.add("hidden");
+    // Click on menu items -> show screen & close menu
+    menuItems.forEach(li => {
+      li.addEventListener('click', () => {
+        const page = li.dataset.page;
+        showScreen(page);
+        // auto-hide menu after selection to keep experience clean
+        side.classList.remove('active');
+      });
+    });
 
+    // core showScreen: fade out current, then fade in new (works by toggling .visible)
+    function showScreen(name) {
+      // quickly find currently visible
+      const current = Object.values(screens).find(s => s.classList.contains('visible'));
+      const next = screens[name];
+      if (!next || current === next) return;
+
+      // start fade out
+      current.classList.remove('visible');
+      current.classList.add('hidden');
+
+      // after fade duration, hide current and reveal next
+      // match CSS transition 0.48s, use a little padding
       setTimeout(() => {
-
-        if (page === "home") {
-          content.innerHTML = `
-            <h1>Dancing UI</h1>
-            <p>A minimal playground for animated UI components.</p>
-            <p>Press <strong>G</strong> to open the menu.</p>
-          `;
-        }
-
-        if (page === "buttons") {
-          content.innerHTML = `
-            <h1>Buttons</h1>
-            <p>Try out different button styles.</p>
-
-            <div class="button-demo">
-              <button class="btn glow">Glow Button</button>
-              <button class="btn bounce">Bounce Button</button>
-              <button class="btn outline">Outline Button</button>
-              <button class="btn glass">Glass Button</button>
-            </div>
-          `;
-        }
-
-        if (page === "sliders") {
-          content.innerHTML = `
-            <h1>Sliders</h1>
-            <p>UI sliders will appear here.</p>
-          `;
-        }
-
-        if (page === "animations") {
-          content.innerHTML = `
-            <h1>Animations</h1>
-            <p>Cool animations will be shown here.</p>
-          `;
-        }
-
-        content.classList.remove("hidden");
-      }, 400);
+        current.classList.remove('hidden');
+        // make sure next starts hidden then visible to trigger transition
+        next.classList.add('hidden');
+        // force layout so browser registers initial state
+        void next.offsetWidth;
+        next.classList.add('visible');
+        next.classList.remove('hidden');
+      }, 480);
     }
+
+    // initial: ensure only home visible
+    for (const k in screens) {
+      screens[k].classList.remove('visible');
+      screens[k].classList.add('hidden');
+    }
+    screens.home.classList.remove('hidden'); screens.home.classList.add('visible');
   </script>
 
 </body>
