--- a/buttons.html
+++ b/buttons.html
@@ -2,128 +2,107 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Animated Buttons</title>
+<title>12 Animated Buttons</title>
 <style>
     body {
-        margin: 0;
-        padding: 0;
         background: #111;
         color: white;
         font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
     }
 
-    /* ---- Grid layout ---- */
-    .button-grid {
-        width: 90%;
-        margin: 50px auto;
+    .grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 25px;
+        grid-template-columns: repeat(3, 180px);
+        gap: 20px;
     }
 
-    .btn {
-        padding: 20px;
-        text-align: center;
-        font-size: 20px;
+    button {
+        width: 180px;
+        height: 80px;
+        font-size: 18px;
+        font-weight: bold;
+        border: none;
         border-radius: 12px;
-        cursor: pointer;
         background: #222;
-        border: 2px solid #444;
-        transition: all 0.25s ease;
-    }
-
-    /* ---- Hover Animations ---- */
-
-    /* 1. Glow */
-    .btn-glow:hover {
-        box-shadow: 0 0 20px #00eaff;
-        border-color: #00eaff;
-    }
-
-    /* 2. Vibrate */
-    @keyframes vibrate {
-        0% { transform: translateX(0); }
-        25% { transform: translateX(-3px); }
-        50% { transform: translateX(3px); }
-        75% { transform: translateX(-3px); }
-        100% { transform: translateX(0); }
-    }
-    .btn-vibrate:hover {
-        animation: vibrate 0.15s infinite;
-    }
-
-    /* 3. Grow */
-    .btn-grow:hover {
-        transform: scale(1.15);
-        background: #333;
-    }
-
-    /* 4. Spin */
-    .btn-spin:hover {
-        transform: rotate(360deg);
-    }
-
-    /* 5. Wobble */
-    @keyframes wobble {
-        0% { transform: rotate(0deg); }
-        25% { transform: rotate(4deg); }
-        50% { transform: rotate(-4deg); }
-        75% { transform: rotate(4deg); }
-        100% { transform: rotate(0deg); }
-    }
-    .btn-wobble:hover {
-        animation: wobble 0.5s ease;
-    }
-
-    /* 6. Pulse */
-    @keyframes pulse {
-        0% { transform: scale(1); }
-        50% { transform: scale(1.1); }
-        100% { transform: scale(1); }
-    }
-    .btn-pulse:hover {
-        animation: pulse 0.6s infinite;
-    }
-
-    /* 7. Color Shift */
-    .btn-color:hover {
-        background: #ff00aa;
-        border-color: #ff00aa;
         color: white;
+        transition: 0.25s ease;
+        cursor: pointer;
     }
 
-    /* 8. Slide Up */
-    .btn-slide:hover {
-        transform: translateY(-10px);
-        background: #333;
-    }
+    /* GLOW */
+    .glow:hover { box-shadow: 0 0 20px #00eaff; }
 
-    /* 9. Tilt */
-    .btn-tilt:hover {
-        transform: rotate(6deg);
-        background: #444;
-    }
+    /* PULSE */
+    .pulse:hover { transform: scale(1.1); }
 
-    /* 10. Bounce */
+    /* BOUNCE */
+    .bounce:hover { animation: bounce 0.4s ease; }
     @keyframes bounce {
-        0% { transform: translateY(0); }
         50% { transform: translateY(-10px); }
-        100% { transform: translateY(0); }
-    }
-    .btn-bounce:hover {
-        animation: bounce 0.4s ease;
     }
 
-    /* 11. Shadow Pop */
-    .btn-pop:hover {
-        box-shadow: 0px 15px 20px rgba(0,0,0,0.4);
-        transform: translateY(-5px);
+    /* SHAKE */
+    .shake:hover { animation: shake 0.3s linear; }
+    @keyframes shake {
+        25% { transform: translateX(-5px); }
+        50% { transform: translateX(5px); }
+        75% { transform: translateX(-5px); }
     }
 
-    /* 12. Flash */
-    @keyframes flash {
-        0% { background: #222; }
-        50% { background: #ffffff; color: black; }
-        100% { background: #222; }
+    /* ROTATE */
+    .rotate:hover { transform: rotate(10deg); }
+
+    /* EXPAND */
+    .expand:hover { transform: scale(1.2); }
+
+    /* SHRINK */
+    .shrink:hover { transform: scale(0.8); }
+
+    /* RAINBOW */
+    .rainbow:hover {
+        background: linear-gradient(90deg, red, yellow, lime, cyan, blue, magenta);
     }
-    .btn-fla
+
+    /* FLIP */
+    .flip:hover { transform: rotateY(180deg); }
+
+    /* SLIDE */
+    .slide:hover { transform: translateX(10px); }
+
+    /* BLUR */
+    .blur:hover { filter: blur(2px); }
+
+    /* SHADOW POP */
+    .pop:hover { box-shadow: 0 10px 20px rgba(0,0,0,0.4); transform: translateY(-5px); }
+</style>
+</head>
+
+<body>
+
+<div class="grid">
+
+    <button class="glow">Glow</button>
+    <button class="pulse">Pulse</button>
+    <button class="bounce">Bounce</button>
+
+    <button class="shake">Shake</button>
+    <button class="rotate">Rotate</button>
+    <button class="expand">Expand</button>
+
+    <button class="shrink">Shrink</button>
+    <button class="rainbow">Rainbow</button>
+    <button class="flip">Flip</button>
+
+    <button class="slide">Slide</button>
+    <button class="blur">Blur</button>
+    <button class="pop">Shadow Pop</button>
+
+</div>
+
+</body>
+</html>
