--- a/index.html
+++ b/index.html
@@ -141,19 +141,38 @@
     </div>
   </section>
 
-  <section id="buttons" class="screen">
-    <div class="panel-inner">
-      <h1>Buttons</h1>
-      <p>Try different button styles — hover and click them.</p>
+<section id="buttons" class="screen">
+  <div class="panel-inner">
+    <h1>Buttons</h1>
+    <p>12 different hover animations — try them out!</p>
 
-      <div class="button-demo">
-        <button class="btn glow">Glow Button</button>
-        <button class="btn bounce">Bounce Button</button>
-        <button class="btn outline">Outline Button</button>
-        <button class="btn glass">Glass Button</button>
-      </div>
+    <div class="button-demo" style="
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 14px;
+      justify-items: center;
+    ">
+
+      <button class="btn glow">Glow</button>
+      <button class="btn pulse">Pulse</button>
+      <button class="btn bounce">Bounce</button>
+
+      <button class="btn shake">Shake</button>
+      <button class="btn rotate">Rotate</button>
+      <button class="btn expand">Expand</button>
+
+      <button class="btn shrink">Shrink</button>
+      <button class="btn rainbow">Rainbow</button>
+      <button class="btn flip">Flip</button>
+
+      <button class="btn slide">Slide</button>
+      <button class="btn blur">Blur</button>
+      <button class="btn pop">Shadow Pop</button>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <section id="sliders" class="screen">
     <div class="panel-inner">
