--- a/index.html
+++ b/index.html
@@ -142,17 +142,9 @@
   </section>
 
 <section id="buttons" class="screen">
-  <div class="panel-inner">
-    <h1>Buttons</h1>
-    <p>12 different hover animations — try them out!</p>
+  <div class="panel-inner" style="padding-top: 0;">
 
-    <div class="button-demo" style="
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
-      justify-items: center;
-    ">
-
+    <div class="button-grid">
       <button class="btn glow">Glow</button>
       <button class="btn pulse">Pulse</button>
       <button class="btn bounce">Bounce</button>
@@ -168,10 +160,11 @@
       <button class="btn slide">Slide</button>
       <button class="btn blur">Blur</button>
       <button class="btn pop">Shadow Pop</button>
-
     </div>
+
   </div>
 </section>
+
 
 
   <section id="sliders" class="screen">
