--- a/index.html
+++ b/index.html
@@ -142,21 +142,20 @@
   </section>
 
 <section id="buttons" class="screen">
-  <div class="panel-inner" style="padding-top: 0;">
+  <div class="panel-inner" style="padding-top: 0; height: 100vh; display: flex;">
 
-    <div class="button-grid">
+    <div class="button-control-panel">
       <button class="btn glow">Glow</button>
       <button class="btn pulse">Pulse</button>
       <button class="btn bounce">Bounce</button>
-
       <button class="btn shake">Shake</button>
+
       <button class="btn rotate">Rotate</button>
       <button class="btn expand">Expand</button>
-
       <button class="btn shrink">Shrink</button>
       <button class="btn rainbow">Rainbow</button>
-      <button class="btn flip">Flip</button>
 
+      <button class="btn flip">Flip</button>
       <button class="btn slide">Slide</button>
       <button class="btn blur">Blur</button>
       <button class="btn pop">Shadow Pop</button>
